--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react_website",
+  "homepage": "http://www.jonathanguiang.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,8 @@
     "reactstrap": "^6.5.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
