--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "reactstrap": "^6.5.0"
   },
